--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,19 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import RecipeGenerator from '../components/RecipeGenerator.astro';
 ---
 
-<Layout>
-	<Welcome />
+<Layout title="AI智能菜谱推荐">
+  <main class="min-h-screen bg-gradient-to-br from-white to-apple-light-gray dark:from-black dark:to-gray-900">
+    <RecipeGenerator />
+  </main>
 </Layout>
+
+<style>
+  main {
+    background-image: url('/background.svg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+</style>
